# Learning

./: .gitignore  README.md  TODO.md
Delft/Aircraft_Performance_Pyhysics_and _imulation/: basics.py  climb_and_descent.py  equations.py
Delft/Aircraft_Performance_Pyhysics_and_simulation/: climb_and_descent.py  cruise_flight.py  equations.py  simulation.py  takeoff_and_landing.py
ada/first/: alire.toml  first.gpr
algorithms/cgal/: CMakeLists.txt  README.md  main.cpp  sweep_line.hpp
algorithms/the_algorithm_design_manual/: readme.md
algorithms/the_algorithm_design_manual/chapter_20_Computational_Geometry/: CMakeLists.txt  geometric_primtives.hpp  main.cpp
assembly/arm64_apple/: README.md  exit_code.s  hello_world.s  hello_world_2.s  integer_addition.s  rsqrt.s  rsqrt_loop.s
c++/cppreference/: .gitignore  CMakeLists.txt  alternative_tokens.hpp  break_shared_ptr_cycle.hpp  eurocontrol.hpp  integers_overflow.hpp  main.cpp  memory_model_order.hpp  misc.hpp  test_alignas.hpp  test_dome.hpp
c++/cppreference/Basic_Concepts/: Basic_concepts.md  Fundamental_types.md  Phases_of_translation.md
c++/design_patterns_for_low_latency&HFT/: .gitignore  CMakeLists.txt  README.md  cache_warming.hpp  compile_time_dispatch.hpp  fast_queue.hpp  low_latency.hpp  main.cpp  utils.hpp
c++/design_patterns_for_low_latency&HFT/docs/: fast_queue.md
c++/modern_cp_third_edition/chapter_1/: CMakeLists.txt
c++/modern_cpp_cookbook_third_edition/chapter_1/: enabling_range_based_for_loops_for_custom_types.hpp  main.cpp
c++/modern_cpp_cookbook_third_edition/chapter_12_C++20_Core_Features/: CMakeLists.txt  main.cpp  specifying_requirements_on_template_arguments_with_concepts.hpp
c++/modern_cpp_cookbook_third_edition/chapter_1_Learning_Modern_Core_Language_Features/: enabling_range_based_for_loops_for_custom_types.hpp  main.cpp  practice_range_based_custom_type.hpp  using_structured_bindings_to_handle_multi_return_values.hpp
c++/modern_cpp_cookbook_third_edition/chapter_6_General_Purpose_Utilities/: CMakeLists.txt  main.cpp  using_variant_as_type_safe_union.hpp  utils.hpp  visiting_and_variant.hpp
c++/modern_cpp_cookbook_third_edition/chapter_8_Leveraging_Threading_and_Concurrency/: .clang-format  CMakeLists.txt  main.cpp  shared_data_access_sync.hpp  threading_and_concurrency.hpp  threading_basic.hpp  understanding_value_categories.hpp  using_joinable_threads.hpp  utils.hpp
coursera/: .gitignore
coursera/Geometric_Algorithms_with_Kevin_Buchin/: README.md
coursera/Geometric_Algorithms_with_Kevin_Buchin/Plane_Sweep_Algorithms/: lab.py
coursera/Geometric_Algorithms_with_Kevin_Buchin/Voronoi_Diagrams_And_Delaunay_Triangulations/: delaunay_triangulation.py  inputTriangulation4.txt  inputTriangulation5.txt  lab.py  triangle_circumcircle.py
coursera/Machine_Learning_Specialization_with_Andrew_Ng/: .gitignore  README.md  plt_overfit.py  requirements.txt
coursera/Machine_Learning_Specialization_with_Andrew_Ng/C1_W1_Lab02_Model_Representation/: lab.py
coursera/Machine_Learning_Specialization_with_Andrew_Ng/C1_W2_Lab01_Python_Numpy_Vectorization_Soln/: lab.py
coursera/Machine_Learning_Specialization_with_Andrew_Ng/C1_W2_Lab02_Multiple_Variable_Soln/: lab.py
coursera/Machine_Learning_Specialization_with_Andrew_Ng/C1_W2_Lab03_Feature_Scaling_and_Learning_Rate_Soln/: lab.py
coursera/Machine_Learning_Specialization_with_Andrew_Ng/C1_W2_Lab04_FeatEng_PolyReg_Soln/: lab.py
coursera/Machine_Learning_Specialization_with_Andrew_Ng/C1_W2_Lab05_Sklearn_GD_Soln/: lab.py
coursera/Machine_Learning_Specialization_with_Andrew_Ng/C1_W3_Lab01_Classification_Soln/: lab.py  plt_one_addpt_onclick.py
coursera/Machine_Learning_Specialization_with_Andrew_Ng/C1_W3_Lab02_Sigmoid_function_Soln/: lab.py
coursera/Machine_Learning_Specialization_with_Andrew_Ng/C1_W3_Lab03_Decision_Boundary_Soln/: lab.py
coursera/Machine_Learning_Specialization_with_Andrew_Ng/C1_W3_Lab04_LogisticLoss_Soln/: lab.py  plt_logistic_loss.py
coursera/Machine_Learning_Specialization_with_Andrew_Ng/C1_W3_Lab05_Cost_Function_Soln/: lab.py
coursera/Machine_Learning_Specialization_with_Andrew_Ng/C1_W3_Lab06_Gradient_Descent_Soln/: lab.py
coursera/Machine_Learning_Specialization_with_Andrew_Ng/C1_W3_Lab07_Scikit_Learn_Soln/: lab.py
coursera/Machine_Learning_Specialization_with_Andrew_Ng/C1_W3_Lab08_Overfitting_Soln/: lab.py
coursera/Machine_Learning_Specialization_with_Andrew_Ng/C1_W3_Lab09_Regularization_Soln/: lab.py
coursera/Machine_Learning_Specialization_with_Andrew_Ng/C2W3_Lab_01_Model_Evaluation_and_Selection/: lab.py  utils.py
coursera/Machine_Learning_Specialization_with_Andrew_Ng/C2W3_Lab_02_Diagnosing_Bias_and_Variance/: lab.py  utils.py
coursera/Machine_Learning_Specialization_with_Andrew_Ng/C2_W1_Lab01_Neurons_and_Layers/: lab.py
coursera/Machine_Learning_Specialization_with_Andrew_Ng/C2_W1_Lab02_CoffeeRoasting_TF/: lab.py
coursera/Machine_Learning_Specialization_with_Andrew_Ng/C2_W1_Lab03_CoffeeRoasting_Numpy/: lab.py
coursera/Machine_Learning_Specialization_with_Andrew_Ng/C2_W2_Derivatives/: lab.py
coursera/Machine_Learning_Specialization_with_Andrew_Ng/C2_W2_Multiclass_TF/: lab.py  lab_utils_multiclass_TF.py
coursera/Machine_Learning_Specialization_with_Andrew_Ng/C2_W2_ReLU_Activation/: autils.py  lab.py  lab_utils_relu.py
coursera/Machine_Learning_Specialization_with_Andrew_Ng/C2_W2_SoftMax/: lab.py  lab_utils_softmax.py
coursera/Machine_Learning_Specialization_with_Andrew_Ng/C2_W4_Lab_01_Decision_Trees/: lab.py  utils.py
hackerrank/c++/: CMakeLists.txt  birthday_cake_candles.hpp  compare_triplets.hpp  main.cpp  time_conversion.hpp  utils.hpp  viral_advertising.hpp
hackerrank/python/: Time_Conversion.py
leetcode/c++/: CMakeLists.txt  main.cpp  utils.hpp
leetcode/c++/practice/: isomorphic_strings.hpp  trapping_rain_water.hpp
llvm/kaleidoscope/: .gitignore  CMakeLists.txt  ast.cpp  ast.hpp  ast_expressions.cpp  ast_expressions.hpp  ast_parser.cpp  ast_parser.hpp  ir_code_generator.cpp  ir_code_generator.hpp  jit.hpp  lexer.cpp  lexer.hpp  main.cpp  token.hpp
(+28 files in other folders)
